# mapper

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CONTEXT.md  CTestTestfile.cmake  Makefile  README.md  build.sh  cmake_install.cmake  main.cpp  nginx_sample.conf  orm-meta-schema.json  ormjsonschema.json
.github/workflows/: context-reminder.yml  init-gh-pages.yml  publish-snapshot.yml
chat/: latest.json  ok.txt
chat/ed5ddd45a465e5c744881aa87f3ce49cee22d1aa/: snapshot.json
data/: example-schema-new.json  example-schema-old.json
include/: bootstrap.hpp  connection.hpp  dbpool.hpp  ddl_visitor.hpp  dml_visitor.hpp  jsonhlp.hpp  lib.hpp  orm.hpp  schemaboss.hpp  schemamanager.hpp  schemaupdate.hpp  snowflake.hpp  sqlconnection.hpp  storage.hpp  ulid.hpp  visitor.hpp
src/: connection_postgres.cpp  connection_sqlite.cpp  ddl_visitor.cpp  dml_visitor.cpp  lib.cpp  orm.cpp  schemaboss.cpp  schemamanager.cpp  schemaupdate.cpp  storage.cpp  visitor.cpp
tests/: fake_sql.hpp  main.cpp  test_dbpool.cpp  test_ddl.cpp  test_defaults.cpp  test_dml.cpp  test_schema_name.cpp  test_schemamanager.cpp  test_schemaupdate.cpp
